about me section done(not responsive)

--- a/index.html
+++ b/index.html
@@ -49,13 +49,35 @@
         </div>
     </section>
 
-    <!-- <section class="about-section">
+    <section class="about-section">
         <div class="main-container">
-            about
+            <div class="heading-container">
+                <h2 class="section-heading">About Me</h2>
+            </div>
+            <div class="section-content">
+                <div class="image-container">
+                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                </div>
+                <div class="text-container">
+                    <h3>I am Sabir</h3>
+                    <p class="profession">Web and Mobile App Developer</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi praesentium recusandae aliquid
+                        adipisci cumque voluptate unde dolore, quae quaerat, fuga commodi expedita corporis obcaecati
+                        exercitationem! Ipsam repudiandae praesentium fugiat aut facilis et vitae. Omnis ipsam fugiat
+                        facere unde nesciunt totam ut laudantium tenetur dicta, alias aliquid dolorem architecto qui,
+                        ullam, reiciendis odit assumenda repudiandae numquam!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi praesentium recusandae aliquid
+                        adipisci cumque voluptate unde dolore, quae quaerat, fuga commodi expedita corporis obcaecati
+                        exercitationem! Ipsam repudiandae praesentium fugiat aut facilis et vitae. Omnis ipsam fugiat
+                        facere unde nesciunt totam ut laudantium tenetur dicta, alias aliquid dolorem architecto qui,
+                        ullam, reiciendis odit assumenda repudiandae numquam!</p>
+                    <a href="#">Download My Resume</a>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section class="services-section">
+    <!-- <section class="services-section">
         <div class="main-container">
             services
         </div>
