--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="section-content">
                 <div class="image-container">
-                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                    <img src="./images/profile-picture.jpg" alt="">
                 </div>
                 <div class="text-container">
                     <h3>I am Sabir</h3>
@@ -77,13 +77,72 @@
         </div>
     </section>
 
-    <!-- <section class="services-section">
+    <section class="services-section">
         <div class="main-container">
-            services
+            <div class="heading-container">
+                <h2 class="section-heading">My Services</h2>
+            </div>
+            <div class="section-content">
+                <div class="services-container">
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <h6>Web Development</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
+                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <h6>Web Development</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
+                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <h6>Web Development</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
+                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <h6>Web Development</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
+                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <h6>Web Development</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
+                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="icon-container">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                        <h6>Web Development</h6>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
+                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section class="work-and-education-section">
+    <!-- <section class="work-and-education-section">
         <div class="main-container">
             work-and-education
         </div>
