worked on work and education section

--- a/index.html
+++ b/index.html
@@ -142,13 +142,47 @@
         </div>
     </section>
 
-    <!-- <section class="work-and-education-section">
+    <section class="work-and-education-section">
         <div class="main-container">
-            work-and-education
+            <div class="heading-container">
+                <h2 class="section-heading">Work & Education</h2>
+            </div>
+            <div class="section-content">
+                <div class="work-container">
+                    <div class="work-item">
+                        <h4>Full stack Web Developer</h4>
+                        <span class="timeline">2018 - 2020</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
+                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                    </div>
+
+                    <div class="work-item">
+                        <h4>Full stack Web Developer</h4>
+                        <span class="timeline">2018 - 2020</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
+                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                    </div>
+
+                    <div class="work-item">
+                        <h4>Full stack Web Developer</h4>
+                        <span class="timeline">2018 - 2020</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
+                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="education-container">
+                    <div class="work-item">
+                        <h4>Full stack Web Developer</h4>
+                        <span class="timeline">2018 - 2020</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
+                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section class="skills-section">
+    <!-- <section class="skills-section">
         <div class="main-container">
             skills
         </div>
