recent projects section work

--- a/index.html
+++ b/index.html
@@ -184,17 +184,55 @@
 
     <!-- <section class="skills-section">
         <div class="main-container">
-            skills
+            <div class="heading-container">
+                <h2 class="section-heading">My Skills</h2>
+            </div>
+            <div class="section-content">
+                
+            </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="recent-projects-section">
         <div class="main-container">
-            recent-projects
+            <div class="heading-container">
+                <h2 class="section-heading">Recent Projects</h2>
+            </div>
+            <div class="section-content">
+                <div class="project-item">
+                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                    <div class="hover-content">
+                        <div class="content-text">
+                            <h4>Web Development</h4>
+                            <h5>View Project</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                    <div class="hover-content">
+                        <div class="content-text">
+                            <h4>Web Development</h4>
+                            <h5>View Project</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-item">
+                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                    <div class="hover-content">
+                        <div class="content-text">
+                            <h4>Web Development</h4>
+                            <h5>View Project</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="main-container">
             footer
         </div>
