--- a/index.html
+++ b/index.html
@@ -232,11 +232,21 @@
         </div>
     </section>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="main-container">
-            footer
+            <div class="section-content">
+                <div class="links">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-github"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+                <p>Copyright © 2021 - All Right Reserved.</p>
+            </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
