--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <title>Sabir Mahsud</title>
 </head>
 
@@ -182,16 +183,58 @@
         </div>
     </section>
 
-    <!-- <section class="skills-section">
+    <section class="skills-section">
         <div class="main-container">
             <div class="heading-container">
                 <h2 class="section-heading">My Skills</h2>
             </div>
             <div class="section-content">
-                
+                <div class="skill-item">
+                    <i class="devicon-html5-plain-wordmark colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-css3-plain-wordmark colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-javascript-plain colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-typescript-plain colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-angularjs-plain-wordmark colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-sass-original colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-ionic-original-wordmark colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-graphql-plain-wordmark colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-react-original-wordmark colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-redux-original colored"></i>
+                </div>
+
+                <div class="skill-item">
+                    <i class="devicon-tailwindcss-original-wordmark colored"></i>
+                </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <section class="recent-projects-section">
         <div class="main-container">
@@ -199,7 +242,7 @@
                 <h2 class="section-heading">Recent Projects</h2>
             </div>
             <div class="section-content">
-                <div class="project-item">
+                <a href="#" class="project-item">
                     <img src="./images/pexels-lukas-574071.jpg" alt="">
                     <div class="hover-content">
                         <div class="content-text">
@@ -207,9 +250,9 @@
                             <h5>View Project</h5>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-item">
+                <a href="#" class="project-item">
                     <img src="./images/pexels-lukas-574071.jpg" alt="">
                     <div class="hover-content">
                         <div class="content-text">
@@ -217,9 +260,9 @@
                             <h5>View Project</h5>
                         </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="project-item">
+                <a href="#" class="project-item">
                     <img src="./images/pexels-lukas-574071.jpg" alt="">
                     <div class="hover-content">
                         <div class="content-text">
@@ -227,7 +270,7 @@
                             <h5>View Project</h5>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
