--- a/index.html
+++ b/index.html
@@ -30,8 +30,28 @@
 
         <div class="main-container">
             <div class="main-intro">
-                <h5>Welcome to my website</h5>
-                <h1>I'm Sabir Mahsud</h1>
+                <div class="intro-content">
+                    <div class="picture">
+                        <img src="./images/profile-picture.jpg" alt="">
+                    </div>
+                    <div class="intro-text">
+                        <h2>
+                            <span>Hi, I'm </span> Sabir Mahsud
+                        </h2>
+                        <p>I have a passion for coding and problem solving. Do you have any ideas for an app? I'll bring
+                            your ideas into reality. Scroll down to learn more about me. Thanks!</p>
+                        <div class="buttons">
+                            <a href="mailto:skmsd98@gmail.com">Send Email</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="scroll-button-container">
+                    <a class="scroll-down-button" onclick="_scrollTo('#about', -80)">
+                        <i class="fas fa-chevron-down"></i>
+                    </a>
+                </div>
+
                 <div class="links">
                     <ul>
                         <li><a href="#"><i class="fab fa-github"></i></a></li>
@@ -40,13 +60,6 @@
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     </ul>
                 </div>
-                <div class="buttons">
-                    <a href="#">View Work</a>
-                    <a href="#">Send Email</a>
-                </div>
-                <a class="scroll-down-button" onclick="_scrollTo('#about', -80)">
-                    <i class="fas fa-chevron-down"></i>
-                </a>
             </div>
         </div>
     </section>
@@ -58,16 +71,14 @@
             </div>
             <div class="section-content">
                 <div class="image-container">
-                    <img src="./images/profile-picture.jpg" alt="">
+                    <img src="./images/pexels-danny-meneses-943101.jpg" alt="">
                 </div>
                 <div class="text-container">
-                    <h3>I am Sabir</h3>
+                    <h3>Sabir Mahsud</h3>
                     <p class="profession">Web and Mobile App Developer</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi praesentium recusandae aliquid
-                        adipisci cumque voluptate unde dolore, quae quaerat, fuga commodi expedita corporis obcaecati
-                        exercitationem! Ipsam repudiandae praesentium fugiat aut facilis et vitae. Omnis ipsam fugiat
-                        facere unde nesciunt totam ut laudantium tenetur dicta, alias aliquid dolorem architecto qui,
-                        ullam, reiciendis odit assumenda repudiandae numquam!</p>
+                    <p>I have more than 3 years of professional experience developing applications for mobile phones and
+                        the web. I create highly optimized front end applications using Angular and React. I use Ionic
+                        to create multi-platform hybrid apps that run on both iOS and Android. </p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi praesentium recusandae aliquid
                         adipisci cumque voluptate unde dolore, quae quaerat, fuga commodi expedita corporis obcaecati
                         exercitationem! Ipsam repudiandae praesentium fugiat aut facilis et vitae. Omnis ipsam fugiat
@@ -88,56 +99,28 @@
                 <div class="services-container">
                     <div class="service-item">
                         <div class="icon-container">
-                            <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-laptop-code"></i>
                         </div>
-                        <h6>Web Development</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
-                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                        <h6>Design to Code Conversion</h6>
+                        <p>I will convert your UI/UX design into a fully responsive website/app.</p>
                     </div>
 
                     <div class="service-item">
                         <div class="icon-container">
-                            <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-cogs"></i>
                         </div>
-                        <h6>Web Development</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
-                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                        <h6>API Integration</h6>
+                        <p>I will integrate your backend APIs with the frontend code. I have experience with both REST
+                            APIs and GraphQL APIs.</p>
                     </div>
 
                     <div class="service-item">
                         <div class="icon-container">
-                            <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-mobile-alt"></i>
                         </div>
-                        <h6>Web Development</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
-                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
-                    </div>
-
-                    <div class="service-item">
-                        <div class="icon-container">
-                            <i class="fas fa-chevron-down"></i>
-                        </div>
-                        <h6>Web Development</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
-                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
-                    </div>
-
-                    <div class="service-item">
-                        <div class="icon-container">
-                            <i class="fas fa-chevron-down"></i>
-                        </div>
-                        <h6>Web Development</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
-                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
-                    </div>
-
-                    <div class="service-item">
-                        <div class="icon-container">
-                            <i class="fas fa-chevron-down"></i>
-                        </div>
-                        <h6>Web Development</h6>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, assumenda provident? Earum
-                            hic voluptas accusamus atque magni, ipsum libero impedit!</p>
+                        <h6>Mobile App Development</h6>
+                        <p>I use Ionic framework to create multi-platform hybrid apps which run on both iOS and Android.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -151,26 +134,27 @@
             </div>
             <div class="section-content">
                 <div class="work-container">
-                    <div class="work-item">
-                        <h4>Full stack Web Developer</h4>
-                        <span class="timeline">2018 - 2020</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
-                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
-                    </div>
+                    <a href="#" class="work-item">
+                        <h4>Freelance Developer</h4>
+                        <span class="timeline">2020 - present</span>
+                        <p>I have been working as a freelance web developer. I have worked on multiple projects and it's
+                            been a great experience for me. My clients are mainly local and I am looking to switch to
+                            the international market.</p>
+                    </a href="#">
 
-                    <div class="work-item">
-                        <h4>Full stack Web Developer</h4>
+                    <a href="#" class="work-item">
+                        <h4>Frontend Developer</h4>
                         <span class="timeline">2018 - 2020</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
                             recusandae consequatur quia expedita similique harum necessitatibus.</p>
-                    </div>
+                    </a href="#">
 
-                    <div class="work-item">
+                    <a href="#" class="work-item">
                         <h4>Full stack Web Developer</h4>
                         <span class="timeline">2018 - 2020</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
                             recusandae consequatur quia expedita similique harum necessitatibus.</p>
-                    </div>
+                    </a href="#">
                 </div>
                 <div class="education-container">
                     <div class="work-item">
