website made fully responsive

--- a/index.html
+++ b/index.html
@@ -134,27 +134,27 @@
             </div>
             <div class="section-content">
                 <div class="work-container">
-                    <a href="#" class="work-item">
+                    <div class="work-item">
                         <h4>Freelance Developer</h4>
                         <span class="timeline">2020 - present</span>
                         <p>I have been working as a freelance web developer. I have worked on multiple projects and it's
                             been a great experience for me. My clients are mainly local and I am looking to switch to
                             the international market.</p>
-                    </a href="#">
+                    </div>
 
-                    <a href="#" class="work-item">
+                    <div class="work-item">
                         <h4>Frontend Developer</h4>
                         <span class="timeline">2018 - 2020</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
                             recusandae consequatur quia expedita similique harum necessitatibus.</p>
-                    </a href="#">
+                    </div>
 
-                    <a href="#" class="work-item">
+                    <div class="work-item">
                         <h4>Full stack Web Developer</h4>
                         <span class="timeline">2018 - 2020</span>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
                             recusandae consequatur quia expedita similique harum necessitatibus.</p>
-                    </a href="#">
+                    </div>
                 </div>
                 <div class="education-container">
                     <div class="work-item">
