added nav toggle functionality for smaller devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
 <body>
     <section id="home" class="hero-section">
+        <input type="checkbox" id="nav-toggle">
+        <label class="nav-toggler" for="nav-toggle">
+            <i class="fas fa-bars"></i>
+        </label>
         <header class="navbar-container">
+            <label class="close-sidebar-button" for="nav-toggle">x</label>
             <nav class="navbar">
                 <ul>
                     <li onclick="_scrollTo('#home')">Home</li>
