--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
 
                 <div class="links">
                     <ul>
-                        <li><a href="#"><i class="fab fa-github"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://github.com/skmsd98" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/sabir-mahsud-102945146/" target="_blank"><i
+                                    class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.facebook.com/skmsd98" target="_blank"><i
+                                    class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/MahsudSabir" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -232,31 +235,31 @@
                 <h2 class="section-heading">Recent Projects</h2>
             </div>
             <div class="section-content">
-                <a href="#" class="project-item">
-                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                <a href="https://kalivra.com/" target="_blank" class="project-item">
+                    <img src="./images/kalivra.png" alt="">
                     <div class="hover-content">
                         <div class="content-text">
-                            <h4>Web Development</h4>
+                            <h4>Kalivra Advanced Rostering Solutions</h4>
                             <h5>View Project</h5>
                         </div>
                     </div>
                 </a>
 
-                <a href="#" class="project-item">
-                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                <a href="https://skmsd98.github.io/responsive-dashboard/" target="_blank" class="project-item">
+                    <img src="./images/responsive-dashboard.png" alt="">
                     <div class="hover-content">
                         <div class="content-text">
-                            <h4>Web Development</h4>
+                            <h4>Responsive Admin Dashboard</h4>
                             <h5>View Project</h5>
                         </div>
                     </div>
                 </a>
 
-                <a href="#" class="project-item">
-                    <img src="./images/pexels-lukas-574071.jpg" alt="">
+                <a href="https://twitter-clone-e5f60.web.app/" target="_blank" class="project-item">
+                    <img src="./images/twitter-clone.png" alt="">
                     <div class="hover-content">
                         <div class="content-text">
-                            <h4>Web Development</h4>
+                            <h4>Twitter Clone</h4>
                             <h5>View Project</h5>
                         </div>
                     </div>
@@ -270,10 +273,13 @@
             <div class="section-content">
                 <div class="links">
                     <ul>
-                        <li><a href="#"><i class="fab fa-github"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://github.com/skmsd98" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/sabir-mahsud-102945146/" target="_blank"><i
+                                    class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.facebook.com/skmsd98" target="_blank"><i
+                                    class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/MahsudSabir" target="_blank"><i class="fab fa-twitter"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <p>Copyright © 2021 - All Right Reserved.</p>
