work and education

--- a/index.html
+++ b/index.html
@@ -143,33 +143,38 @@
             <div class="section-content">
                 <div class="work-container">
                     <div class="work-item">
-                        <h4>Freelance Developer</h4>
-                        <span class="timeline">2020 - present</span>
-                        <p>I have been working as a freelance web developer. I have worked on multiple projects and it's
-                            been a great experience for me. My clients are mainly local and I am looking to switch to
-                            the international market.</p>
+                        <h4>Frontend Developer <span>| NasTech Solutions</span></h4>
+                        <span class="timeline">Feb 2020 - Sept 2021</span>
+                        <p>Worked as a frontend developer, mainly on Angular and Ionic. Key resonsiblities
+                            included creating responsive User Interfaces, Integrating APIs, code optimization and
+                            testing and debugging the app in case
+                            of any issues.</p>
                     </div>
 
                     <div class="work-item">
-                        <h4>Frontend Developer</h4>
-                        <span class="timeline">2018 - 2020</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
-                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                        <h4>Frontend Developer <span>| InApp Solutions</span></h4>
+                        <span class="timeline">Dec 2018 - Feb 2020</span>
+                        <p>Worked as a junior frontend developer, mainly on React and Angular applications.
+                            Responsible for creating responsive User Interfaces with clean code and Integrating REST
+                            APIs on the frontend.</p>
                     </div>
 
                     <div class="work-item">
-                        <h4>Full stack Web Developer</h4>
-                        <span class="timeline">2018 - 2020</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
-                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                        <h4>Frontend Internee <span>| AppBakerz</span></h4>
+                        <span class="timeline">June 2018 - Sep 2018</span>
+                        <p>Worked as an intern for a frontend position. Mostly worked on React and Redux. Great
+                            learning experience. It helped me push my career forward.</p>
                     </div>
                 </div>
                 <div class="education-container">
                     <div class="work-item">
-                        <h4>Full stack Web Developer</h4>
-                        <span class="timeline">2018 - 2020</span>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi neque deleniti omnis libero
-                            recusandae consequatur quia expedita similique harum necessitatibus.</p>
+                        <h4>Bachelors in Computer Science (BSCS)</h4>
+                        <h5>University of Karachi</h5>
+                        <span class="timeline">2016 - 2019</span>
+                        <p>Graduated with a four year degree in Computer Science. The courses I took include
+                            Artificial Intelligence, Database Design, OOP, Compiler Design, Discrete Maths, Differential
+                            Equations, Numerial Computing, Networking, Data Structures, Natural Language Processing and
+                            many more.</p>
                     </div>
                 </div>
             </div>
