updated about me text

--- a/index.html
+++ b/index.html
@@ -84,14 +84,19 @@
                 <div class="text-container">
                     <h3>Sabir Mahsud</h3>
                     <p class="profession">Web and Mobile App Developer</p>
-                    <p>I have more than 3 years of professional experience developing applications for mobile phones and
-                        the web. I create highly optimized front end applications using Angular and React. I use Ionic
-                        to create multi-platform hybrid apps that run on both iOS and Android. </p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi praesentium recusandae aliquid
-                        adipisci cumque voluptate unde dolore, quae quaerat, fuga commodi expedita corporis obcaecati
-                        exercitationem! Ipsam repudiandae praesentium fugiat aut facilis et vitae. Omnis ipsam fugiat
-                        facere unde nesciunt totam ut laudantium tenetur dicta, alias aliquid dolorem architecto qui,
-                        ullam, reiciendis odit assumenda repudiandae numquam!</p>
+                    <p>I have more than 3 years of experience developing apps for mobile phones and
+                        the web. I have worked on several small and large scale applications throughout my career and
+                        looking for better challenges ahead.</p>
+                    <p>I strongly believe in professional work ethics and always make sure to keep myself upto
+                        client's expectations. Coding for me is not just a profession, but also a hobby and I dedicate
+                        myself to follow the best practices in the software industry.</p>
+                    <p>I have worked extensively on Angular, React and Ionic apps including related technologies like
+                        RxJs, Redux, Typescript and Cordova to name a few. For UI, I prefer using custom CSS with modern
+                        features like Flexbox, CSS
+                        Grid, CSS Varibles and using libaries like SASS and Tailwind although I can work with
+                        Bootstrap and Material UI. I organize my project structure in a modular approach where each
+                        feature
+                        is broken down into separate component or modal.</p>
                     <a href="#">Download My Resume</a>
                 </div>
             </div>
