--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li onclick="_scrollTo('#services', -80)">Services</li>
                     <li onclick="_scrollTo('#work-and-education', -80)">Work</li>
                     <li onclick="_scrollTo('#recent-projects', -80)">Portfolio</li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a target="_blank" href="./files/Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -97,7 +97,7 @@
                         Bootstrap and Material UI. I organize my project structure in a modular approach where each
                         feature
                         is broken down into separate component or modal.</p>
-                    <a href="#">Download My Resume</a>
+                    <a target="_blank" href="./files/Resume.pdf">Download My Resume</a>
                 </div>
             </div>
         </div>
